add for style.less

--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
-  <link rel="stylesheet/less" type="text/css" href="grid.less"/>
- 
-  <link rel="stylesheet/less" type="text/css" href="button_style.less"/>
+  <link rel="stylesheet/less" type="text/css" href="style/style.less"/>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
-  <title>Grid</title>
+  <title>Grid and buttons</title>
 </head>
 <body>
 <div class="row">
@@ -71,6 +69,8 @@
   <div class="column column-5"></div>
   <div class="column column-7"></div>
 </div>
+<br>
+<br>
 <button class="btn2-mini">btn2-mini</button>
 <button class="btn2 small">btn2 small</button>
 <button class="btn2-sm">btn2-sm</button>
