--- a/index.html
+++ b/index.html
@@ -3,51 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
-  <link rel="stylesheet/less" type="text/css" href="style/style.less"/>
+  <link rel="stylesheet/less" type="text/css" href="style.less"/>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
   <title>Grid and buttons</title>
 </head>
 <body>
 <div class="row">
-  <div class="column column-1"></div>
-  <div class="column column-1"></div>
-  <div class="column column-1"></div>
-  <div class="column column-1"></div>
-  <div class="column column-1"></div>
-  <div class="column column-1"></div>
-  <div class="column column-1"></div>
-  <div class="column column-1"></div>
-  <div class="column column-1"></div>
-  <div class="column column-1"></div>
-  <div class="column column-1"></div>
-  <div class="column column-1"></div>
-
+  <div class="column column-1">1</div>
+  <div class="column column-1">1</div>
+  <div class="column column-1">1</div>
+  <div class="column column-1">1</div>
+  <div class="column column-1">1</div>
+  <div class="column column-1">1</div>
+  <div class="column column-1">1</div>
+  <div class="column column-1">1</div>
+  <div class="column column-1">1</div>
+  <div class="column column-1">1</div>
+  <div class="column column-1">1</div>
+  <div class="column column-1">1</div>
 </div>
 <div class="row">
-  <div class="column column-2"></div>
-  <div class="column column-2"></div>
-  <div class="column column-2"></div>
-  <div class="column column-2"></div>
-  <div class="column column-2"></div>
-  <div class="column column-2"></div>
+  <div class="column column-2">2</div>
+  <div class="column column-2">2</div>
+  <div class="column column-2">2</div>
+  <div class="column column-2">2</div>
+  <div class="column column-2">2</div>
+  <div class="column column-2">2</div>
 </div>
 <div class="row">
-  <div class="column column-3"></div>
-  <div class="column column-3"></div>
-  <div class="column column-3"></div>
-  <div class="column column-3"></div>
+  <div class="column column-3">3</div>
+  <div class="column column-3">3</div>
+  <div class="column column-3">3</div>
+  <div class="column column-3">3</div>
 </div>
 <div class="row">
-  <div class="column column-4"></div>
-  <div class="column column-4"></div>
-  <div class="column column-4"></div>
+  <div class="column column-4">4</div>
+  <div class="column column-4">4</div>
+  <div class="column column-4">4</div>
 </div>
 <div class="row">
-  <div class="column column-6"></div>
-  <div class="column column-6"></div>
+  <div class="column column-6">6</div>
+  <div class="column column-6">6</div>
 </div>
 <div class="row">
-  <div class="column column-12"></div>
+  <div class="column column-12">12</div>
 </div>
 <div class="row">
   <div class="column column-1"></div>
@@ -68,6 +67,10 @@
 <div class="row">
   <div class="column column-5"></div>
   <div class="column column-7"></div>
+</div>
+<div class="row">
+  <div class="column column-1">1</div>
+  <div class="column column-6">6</div>
 </div>
 <br>
 <br>
