--- a/index.html
+++ b/index.html
@@ -4,11 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
+  <link rel="stylesheet/less" type="text/css" href="style/burger.less"/>
   <link rel="stylesheet/less" type="text/css" href="style.less"/>
   <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
-  <title>Grid and buttons</title>
+  <title>PS2,PS3</title>
 </head>
 <body>
+
+<nav class="dark">
+  <div class="logo"><img src="logo.png" alt="logo" id="logo"></div>
+  <div class="burger"><i class="fas fa-bars fa-w-14 fa-2x"></i></div>
+  <ul class="nav-menu">
+    <li><a href="link1">Пункт 1</a></li>
+    <li><a href="link2">Пункт 2</a></li>
+    <li><a href="link2">Пункт 3</a></li>
+  </ul>
+</nav>
+
+<br>
+
+
+
+
+
+
+
 <div class="row">
   <div class="column column-1">1</div>
   <div class="column column-1">1</div>
@@ -116,5 +136,6 @@
 <div class="btn2">div btn2</div>
 <br>
 <input class="btn3" value="input btn3"><br>
+<script src="js/burger.js"></script>
 </body>
 </html>
