change index.html add fontawesome

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a92211bf3b.js" crossorigin="anonymous"></script>
   <link rel="stylesheet/less" type="text/css" href="style/burger.less"/>
   <link rel="stylesheet/less" type="text/css" href="style.less"/>
   <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
