--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/a92211bf3b.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet/less" type="text/css" href="style/burger.less"/>
   <link rel="stylesheet/less" type="text/css" href="style.less"/>
+  <link rel="stylesheet/less" type="text/css" href="style/burger.less"/>
   <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
   <title>PS2,PS3</title>
 </head>
 <body>
 
 <nav class="dark">
-  <div class="logo"><img src="logo.png" alt="logo" id="logo"></div>
+  <div class="logo"><img src="images/logo.png" alt="logo" id="logo"></div>
   <div class="burger"><i class="fas fa-bars fa-w-14 fa-2x"></i></div>
   <ul class="nav-menu">
     <li><a href="link1">Пункт 1</a></li>
@@ -23,9 +23,6 @@
 </nav>
 
 <br>
-
-
-
 
 
 
