add test for burger, change dir style.less

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
+  <link rel="stylesheet/less" type="text/css" href="style/style.less"/>
   <script src="https://kit.fontawesome.com/a92211bf3b.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet/less" type="text/css" href="style.less"/>
-  <link rel="stylesheet/less" type="text/css" href="style/burger.less"/>
   <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
-  <title>PS2,PS3</title>
+  <title>PS2 and PS3</title>
 </head>
 <body>
-
+<div>
 <nav class="dark">
   <div class="logo"><img src="images/logo.png" alt="logo" id="logo"></div>
   <div class="burger"><i class="fas fa-bars fa-w-14 fa-2x"></i></div>
@@ -21,12 +20,8 @@
     <li><a href="link2">Пункт 3</a></li>
   </ul>
 </nav>
-
+</div>
 <br>
-
-
-
-
 <div class="row">
   <div class="column column-1">1</div>
   <div class="column column-1">1</div>
