--- a/index.html
+++ b/index.html
@@ -4,117 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
-  <link rel="stylesheet/less" type="text/css" href="style.less"/>
+  <script src="https://kit.fontawesome.com/a92211bf3b.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet/less" type="text/css" href="style/style.less"/>
   <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
   <title>Grid and buttons</title>
 </head>
 <body>
-<div class="row">
-  <div class="column column-1">1</div>
-  <div class="column column-1">1</div>
-  <div class="column column-1">1</div>
-  <div class="column column-1">1</div>
-  <div class="column column-1">1</div>
-  <div class="column column-1">1</div>
-  <div class="column column-1">1</div>
-  <div class="column column-1">1</div>
-  <div class="column column-1">1</div>
-  <div class="column column-1">1</div>
-  <div class="column column-1">1</div>
-  <div class="column column-1">1</div>
+<div id="carousel">
+<button class="btn" id="btn_prev"><i class="fas fa-chevron-left"></i></button>
+<div id="carousel1">
+  <div id="carousel_photo">
+    <img class="slide-1" src="https://loremflickr.com/320/240?random=1" />
+    <img class="slide-2" src="https://loremflickr.com/320/240?random=2" />
+    <img class="slide-3" src="https://loremflickr.com/320/240?random=3" />
+    <img class="slide-4" src="https://loremflickr.com/320/240?random=4" />
+  </div>
 </div>
-<div class="row">
-  <div class="column column-2">2</div>
-  <div class="column column-2">2</div>
-  <div class="column column-2">2</div>
-  <div class="column column-2">2</div>
-  <div class="column column-2">2</div>
-  <div class="column column-2">2</div>
+<button class="btn" id="btn_next"><i class="fas fa-chevron-right"></i></button>
 </div>
-<div class="row">
-  <div class="column column-3">3</div>
-  <div class="column column-3">3</div>
-  <div class="column column-3">3</div>
-  <div class="column column-3">3</div>
-</div>
-<div class="row">
-  <div class="column column-4">4</div>
-  <div class="column column-4">4</div>
-  <div class="column column-4">4</div>
-</div>
-<div class="row">
-  <div class="column column-6">6</div>
-  <div class="column column-6">6</div>
-</div>
-<div class="row">
-  <div class="column column-12">12</div>
-</div>
-<div class="row">
-  <div class="column column-1"></div>
-  <div class="column column-11"></div>
-</div>
-<div class="row">
-  <div class="column column-2"></div>
-  <div class="column column-10"></div>
-</div>
-<div class="row">
-  <div class="column column-3"></div>
-  <div class="column column-9"></div>
-</div>
-<div class="row">
-  <div class="column column-4"></div>
-  <div class="column column-8"></div>
-</div>
-<div class="row">
-  <div class="column column-5"></div>
-  <div class="column column-7"></div>
-</div>
-<div class="row">
-  <div class="column column-1">1</div>
-  <div class="column column-6">6</div>
-</div>
-<br>
-<br>
-<button class="btn2-mini">btn2-mini</button>
-<button class="btn2 small">btn2 small</button>
-<button class="btn2-sm">btn2-sm</button>
-<button class="btn2">btn2</button>
-<button class="btn2-lg">btn2-lg</button>
-<button class="btn2-max">btn2-max</button>
-<button class="btn2 large">btn2 large</button>
-<br>
-<br>
-<button class="btn2-warning">btn2-warning</button>
-<button class="btn2-success">btn2-success</button>
-<button class="btn2-danger">btn2-danger</button>
-<button class="btn2-info">btn2-info</button>
-<button class="btn2-white">btn2-white</button>
-<button class="btn2-black">btn2-black</button>
-<br>
-<br>
-<button class="btn3-sm">btn3-sm</button>
-<button class="btn3">btn3</button>
-<button class="btn3-lg">btn3-lg</button>
-<br>
-<br>
-<button class="btn4-sm">btn4-sm</button>
-<button class="btn4">btn4</button>
-<button class="btn4-lg">btn4-lg</button>
-<br>
-<br>
-<button class="btn4-warning">btn4-warning</button>
-<button class="btn4-danger">btn4-danger</button>
-<br>
-<br>
-<button class="btn4 large success">btn4 large success</button>
-<button class="btn2 large success">btn2 large success</button>
-<br>
-<br>
-<button class="btn2 disabled">btn2 disabled</button>
-<br>
-<br>
-<div class="btn2">div btn2</div>
-<br>
-<input class="btn3" value="input btn3"><br>
+
+<script src="js/carousel.js"></script>
 </body>
 </html>
