--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div id="carousel">
-<button class="btn" id="btn_prev"><i class="fas fa-chevron-left"></i></button>
+<button class="btnSlide" id="btn_prev"><i class="fas fa-chevron-left"></i></button>
 <div id="carousel1">
   <div id="carousel_photo">
     <img class="slide-1" src="https://loremflickr.com/320/240?random=1" />
@@ -20,7 +20,7 @@
     <img class="slide-4" src="https://loremflickr.com/320/240?random=4" />
   </div>
 </div>
-<button class="btn" id="btn_next"><i class="fas fa-chevron-right"></i></button>
+<button class="btnSlide" id="btn_next"><i class="fas fa-chevron-right"></i></button>
 </div>
 
 <script src="js/carousel.js"></script>
