--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   </ul>
 </nav>
 <br>
+<h1>Carousel</h1>
 <div id="carousel">
   <button class="btnSlide" id="btn_prev"><i class="fas fa-chevron-left"></i></button>
   <div id="carousel1">
