--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
 </head>
 <body>
 <h1>Modal windows</h1>
+<div id="modal-bg-dark"></div>
 <button class="modal-trigger" data-target="send">Отправить1</button>
 <button class="modal-trigger" data-target="send2">Отправить2</button>
+
 <div class="modal" id="send">
   <h3>Window 1</h3>
   <div class="text">
     111111 1111 11111 1111 111111111111 1111 11111 1111 111111111111 1111 11111 1111 111111111111 1111 11111 1111
     111111111111 1111 11111 1111 111111111111 1111 11111 1111 111111111111 1111 11111 1111 111111
+  </div>
+  <button class="modal-trigger" data-target="send2">Отправить2</button>
+  <div class="text">
+    ttttttttttttttt ttttttttttttttttttt tttttttttttttttttttttt ttttttttttttttttttttttttt ttttttttttttt
   </div>
   <button class="modal-close">Ok</button>
   <div class="text">
@@ -46,17 +52,7 @@
 </nav>
 <br>
 <h1>Carousel</h1>
-<div id="carousel">
-  <button class="btnSlide" id="btn_prev"><i class="fas fa-chevron-left"></i></button>
-  <div id="carousel1">
-    <div id="carousel_photo">
-      <img class="slide-1" src="https://loremflickr.com/320/240?random=1"/>
-      <img class="slide-2" src="https://loremflickr.com/320/240?random=2"/>
-      <img class="slide-3" src="https://loremflickr.com/320/240?random=3"/>
-      <img class="slide-4" src="https://loremflickr.com/320/240?random=4"/>
-    </div>
-  </div>
-  <button class="btnSlide" id="btn_next"><i class="fas fa-chevron-right"></i></button>
+<div id="carousel1">
 </div>
 <br>
 <h1>Grid</h1>
@@ -168,10 +164,12 @@
 <div class="btn2">div btn2</div>
 <br>
 <input class="btn3" value="input btn3"><br>
-
+<script src="js/carousel.js"></script>
+<script>
+  const config1 = ["https://loremflickr.com/320/240?random=1", "https://loremflickr.com/320/240?random=2", "https://loremflickr.com/320/240?random=3", "https://loremflickr.com/320/240?random=4"];
+  Carousel("carousel1", config1);
+</script>
 <script src="js/modal.js"></script>
 <script src="js/burger.js"></script>
-<script src="js/carousel.js"></script>
-
 </body>
 </html>
