add button in burger index.html

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 <h1>Burger menu</h1>
 <nav class="dark">
   <div class="logo"><img src="images/logo.png" alt="logo" id="logo"></div>
-  <div class="burger"><i class="fas fa-bars fa-w-14 fa-2x"></i></div>
+  <div class="burger"><button><i class="fas fa-bars fa-w-14 fa-2x"></i></button></div>
   <ul class="nav-menu">
     <li><a href="link1">Пункт 1</a></li>
     <li><a href="link2">Пункт 2</a></li>
-    <li><a href="link2">Пункт 3</a></li>
+    <li><a href="link3">Пункт 3</a></li>
   </ul>
 </nav>
 <br>
