change location modules

--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
   <title>PS2 and PS3</title>
 </head>
 <body>
+<h1>Carousel</h1>
+<div id="carousel1">
+</div>
+<br>
 <h1>Modal windows</h1>
-<button class="modal-trigger" data-target="send">Отправить1</button>
-<button class="modal-trigger" data-target="send2">Отправить2</button>
+<button class="modal-trigger" data-target="send">Test for modal "Отправить1"</button>
+<br>
+<br>
+<button class="modal-trigger" data-target="send2">Test for modal "Отправить2"</button>
 <div class="modal" id="send">
   <h3>Window 1</h3>
   <div class="text">
     111111 1111 11111 1111 111111111111 1111 11111 1111 111111111111 1111 11111 1111 111111111111 1111 11111 1111
     111111111111 1111 11111 1111 111111111111 1111 11111 1111 111111111111 1111 11111 1111 111111
   </div>
-  <button class="modal-trigger" data-target="send2">Отправить2 (add new modal window)</button>
+  <button class="modal-trigger" data-target="send2">Test for modal Отправить2 (add new modal window)</button>
   <div class="text">
     ttttttttttttttt ttttttttttttttttttt tttttttttttttttttttttt ttttttttttttttttttttttttt ttttttttttttt
   </div>
@@ -50,10 +56,6 @@
     <li><a href="link3">Пункт 3</a></li>
   </ul>
 </nav>
-<br>
-<h1>Carousel</h1>
-<div id="carousel1">
-</div>
 <br>
 <h1>Grid</h1>
 <div class="row">
@@ -166,7 +168,8 @@
 <input type="text" class="btn3" value="input btn3"><br>
 <script src="js/carousel.js"></script>
 <script>
-  const config1 = ["https://loremflickr.com/320/240?random=1", "https://loremflickr.com/320/240?random=2", "https://loremflickr.com/320/240?random=3", "https://loremflickr.com/320/240?random=4"];
+  const config1 = ["https://loremflickr.com/420/240?random=1", "https://loremflickr.com/420/240?random=2",
+    "https://loremflickr.com/420/240?random=3", "https://loremflickr.com/420/240?random=4"];
   Carousel("carousel1", config1);
 </script>
 <script src="js/modal.js"></script>
