changed index.html (add id, script for Table)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <title>PS2 and PS3</title>
 </head>
 <body>
+<h1>Table</h1>
+<div id="usersTable"></div>
 <h1>Carousel</h1>
 <div id="carousel1">
 </div>
@@ -174,5 +176,6 @@
 </script>
 <script src="js/modal.js"></script>
 <script src="js/burger.js"></script>
+<script src="js/table.js"> </script>
 </body>
 </html>
