--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://kit.fontawesome.com/a92211bf3b.js" crossorigin="anonymous"></script>
   <link rel="stylesheet/less" type="text/css" href="style/style.less"/>
   <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
-  <title>PS2 and PS3</title>
+  <title>PS2 and PS3, PS4</title>
 </head>
 <body>
 <h1>Table</h1>
